--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,20 +1,41 @@
-<main class="grid gap-8 w-[32rem]">
+<main class="grid gap-8 w-fit p-2 lg:w-[32rem]">
   <h2
-    class="px-6 py-2 bg-teal-700 text-white text-5xl font-extralight rounded-xl text-center"
+    class="px-6 py-2 bg-teal-700 text-white text-xl lg:text-5xl font-extralight rounded-xl text-center"
   >
     Medal per Country
   </h2>
   <div class="flex gap-6 items-center w-full">
-    <div class="grid gap-4 place-content-center rounded-xl border-2 border-teal-700 p-4 w-full">
-      <h3 class="text-2xl font-extralight">Number of JOs</h3>
-      <span class="text-center font-semibold text-3xl">{{ olympics?.[0]?.participations?.length }}</span>
+    <div
+      class="h-full grid gap-2 lg:gap-4 place-content-center rounded-xl border-2 border-teal-700 p-4 w-full"
+    >
+      <h3 class="md:text-xl lg:text-2xl font-extralight text-center">Number of JOs</h3>
+      <span
+        class="text-center font-semibold text-xl lg:text-3xl"
+        >{{ olympics?.[0]?.participations?.length }}</span
+      >
     </div>
-    <div class="grid gap-4 rounded-xl border-2 border-teal-700 p-4 w-full place-content-center">
-      <h3 class="text-2xl font-extralight">Number of countries</h3>
-      <span class="text-center font-semibold text-3xl"> {{ olympics?.length }} </span>
+    <div
+      class="h-full grid gap-4 rounded-xl border-2 border-teal-700 p-4 w-full place-content-center"
+    >
+      <h3 class="lg:text-2xl md:text-lg font-extralight text-center">Number of countries</h3>
+      <span class="text-center font-semibold text-xl lg:text-3xl">
+        {{ olympics?.length }}
+      </span>
     </div>
   </div>
   @if (olympics) {
-      <app-pie-chart [data]="convertOlympicsToPieChartData(olympics)"></app-pie-chart>
+    <ngx-charts-pie-chart
+    [results]="convertOlympicsToPieChartData(olympics)"
+    [view]="view"
+    [labels]="true"
+    [doughnut]="false"
+    [gradient]="false"
+    [arcWidth]="0.15"
+    [explodeSlices]="false"
+    [animations]="true"
+    (select)="onSelect($event)"
+    class="border rounded-xl"
+  >
+  </ngx-charts-pie-chart>
   }
 </main>
