--- a/src/app/pages/not-found/not-found.component.html
+++ b/src/app/pages/not-found/not-found.component.html
@@ -1,4 +1,4 @@
-<div class="center">
-  <h2>No corresponding page found</h2>
-  <a routerLink="">Go back</a>
+<div class="grid gap-6">
+  <h2 class="font-semibold">No corresponding page found</h2>
+  <a routerLink="" class="text-white px-4 py-1 bg-teal-600 hover:bg-teal-700 rounded-xl w-fit">← Go back</a>
 </div>
