--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,4 +1,4 @@
-<main class="grid gap-8 w-fit p-2 lg:w-[32rem]">
+<main class="grid gap-8 w-fit p-2">
   <h2
     class="px-6 py-2 bg-teal-700 text-white text-xl lg:text-5xl font-extralight rounded-xl text-center"
   >
