Refactor le composant Detail et Home : amélioration de la gestion des données pour les graphiques, optimisation des styles et mise à jour de la logique de conversion des données

--- a/src/app/pages/detail/detail.component.html
+++ b/src/app/pages/detail/detail.component.html
@@ -49,7 +49,7 @@
   </div>
   @if (olympicData) {
   <ngx-charts-line-chart
-    [results]="convertOlympicDataToLineChartData(olympicData)"
+    [results]="lineChartData"
     [view]="view"
     [showXAxisLabel]="true"
     [showYAxisLabel]="true"
@@ -59,7 +59,6 @@
     [yScaleMax]="getYAxisMax()"
     [autoScale]="true"
     [animations]="false"
-    class="border rounded-xl flex items-center justify-center"
   >
   </ngx-charts-line-chart>
   }
